--- a/src/styles/landing-style.css
+++ b/src/styles/landing-style.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
 
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
 }
 
 body {
@@ -253,9 +256,10 @@ a.hero-button:hover {
   display: flex;
   align-items: center;
   align-self: center;
+  width: 50%;
 }
 .screenshot {
-  width: 600px;
+  width: 100%;
   border-radius: 10px;
 }
 .how-to-play {
@@ -263,7 +267,25 @@ a.hero-button:hover {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding: 80px;
+  padding: 10px;
+  
+}
+.how-to-play h3 {
+  padding: 0;
+  line-height: 1em;
+  font-weight: bold;
+}
+.how-to {
+  display: flex;
+  flex-direction: column;
+
+  width: 50%;
+  padding: 30px;
+  justify-content: space-between;
+}
+.how-to img {
+  width: 100%;
+
 }
 h2 {
   font-size: 40px;
@@ -283,10 +305,22 @@ p {
     display: flex;
     flex-direction: column;
   }
+  .screenshot-container {
+    width: 100%;
+  }
+  .how-to {
+    width: 100%;
+  }
+  .how-to img {
+    width: 100%;
+  
+  }
   h2 {
     text-align: center;
   }
 }
+
+
 
 @media (max-width: 700px) {
   .screenshot {
